--- a/force-app/main/default/lwc/adminpage/adminpage.css
+++ b/force-app/main/default/lwc/adminpage/adminpage.css
@@ -21,8 +21,8 @@
   }
   .cardText {
     max-width: 100%; /* Ensure the container does not exceed the width of its parent */
-    padding: 0 20px;
     margin-bottom: 20px;
+    margin-top: 20px;
   }
 
   .slds-m-top_medium {
